samples/_failures_safe/1761129366_070687_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4b9fa7ef.c: In function ‘main’:
./samples/SAFE/__tmp_4b9fa7ef.c:153:9: error: expected expression at end of input
  153 |         } else
      |         ^
./samples/SAFE/__tmp_4b9fa7ef.c:153:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4b9fa7ef.c:153:9: error: expected declaration or statement at end of input
